kanc/src/tests/sample_code/should_fail/single_file/parse/use/dot_as.k
use foo.bar. as lorem;
